# ParkSathi

./: README.md
parksathi-android/: settings.gradle.kts
parksathi-android/app/: build.gradle.kts
parksathi-android/app/src/androidTest/java/in/parksathi/app/: ExampleInstrumentedTest.kt
parksathi-android/app/src/main/: AndroidManifest.xml
parksathi-android/app/src/main/res/values/: strings.xml  themes.xml
parksathi-android/app/src/main/res/xml/: network_security_config.xml
parksathi-android/gradle/wrapper/: gradle-wrapper.properties
parksathi-backend/: .gitignore  README.md  main.py  pyproject.toml
parksathi-backend/app/: main.py
parksathi-backend/app/api/: router.py
parksathi-backend/app/api/endpoints/: admin.py  booking.py  owner.py  parking.py  payment.py  user.py
parksathi-backend/app/api/v1/: router.py
parksathi-backend/app/api/v1/endpoints/: health.py  user.py
parksathi-backend/app/auth/: firebase.py
parksathi-backend/app/config/: __init__.py  config.py  database.py  websocket_mgr.py
parksathi-backend/app/model/: booking.py  parking.py  user.py
parksathi-backend/app/schema/: booking.py  dashboard.py  parking.py  parking_spot_response.py  payment.py
parksathi-partner-android/: settings.gradle.kts
parksathi-partner-android/app/: build.gradle.kts
parksathi-partner-android/app/src/main/: AndroidManifest.xml
parksathi-partner-android/app/src/main/res/values/: strings.xml  themes.xml
parksathi-partner-android/app/src/main/res/xml/: network_security_config.xml
parksathi-partner-android/gradle/wrapper/: gradle-wrapper.properties
(+48 files in other folders)
